manifests/nginx-proxy-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-proxy
    tenant: a
  name: nginx-proxy-a
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
      tenant: a
      part-of: thanos
  template:
    metadata:
      labels:
        app: nginx-proxy
        tenant: a
        part-of: thanos
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx
      volumes:
        - name: config-volume
          configMap:
            name: nginx-proxy-a
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-proxy
    tenant: a
    servicemonitor: default-servicemonitor
    monitor: "false"
  name: nginx-proxy-a
  namespace: tenant-a
spec:
  ports:
  - name: web
    port: 80
    targetPort: http
  selector:
    app: nginx-proxy
    tenant: a
