manifests/thanos-receive-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-receive
    tenant: default-tenant
    controller.receive.thanos.io/hashring: default
    part-of: thanos
  name: thanos-receive
  namespace: thanos
spec:
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 10902
    targetPort: 10902
  - name: remote-write
    port: 19291
    targetPort: 19291
  selector:
    app: thanos-receive
    tenant: default-tenant
    controller.receive.thanos.io: thanos-receive-controller
    controller.receive.thanos.io/hashring: default
    part-of: thanos
