manifests/prometheus-tenant-a.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: prometheus-operator-prometheus
    tenant: a
  name: tenant-a-prometheus
  namespace: tenant-a
spec:
  rules:
  - host: tenant-a.prometheus.local
    http:
      paths:
      - backend:
          serviceName: tenant-a-prometheus
          servicePort: 9090
        path: /
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-operator-prometheus
    tenant: a
    servicemonitor: default-servicemonitor
    monitor: "true"
  name: tenant-a-prometheus
  namespace: tenant-a
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
    prometheus: tenant-a-prometheus
  sessionAffinity: None
  type: ClusterIP
