manifests/thanos-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: thanos-query
    part-of: thanos
  name: thanos-query
  namespace: thanos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-query
      part-of: thanos
  template:
    metadata:
      labels:
        app: thanos-query
        part-of: thanos
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - thanos-query
              namespaces:
              - observatorium
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - query
        - --log.level=info
        - --grpc-address=0.0.0.0:10901
        - --http-address=0.0.0.0:9090
        - --query.replica-label=prometheus_replica
        - --query.replica-label=receive_replica
        - --store=dnssrv+_grpc._tcp.thanos-store-shard-0.thanos.svc.cluster.local
        - --store=dnssrv+_grpc._tcp.thanos-receive-default.thanos.svc.cluster.local
        - --store=dnssrv+_grpc._tcp.thanos-receive-hashring-0.thanos.svc.cluster.local
        - --query.timeout=15m
        image: quay.io/thanos/thanos:v0.14.0
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /-/healthy
            port: 9090
            scheme: HTTP
          periodSeconds: 30
        name: thanos-query
        ports:
        - containerPort: 10901
          name: grpc
        - containerPort: 9090
          name: http
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: 9090
            scheme: HTTP
          periodSeconds: 5
        terminationMessagePolicy: FallbackToLogsOnError
      terminationGracePeriodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-query
    part-of: thanos
  name: thanos-query
  namespace: thanos
spec:
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
  - name: http
    port: 9090
    targetPort: http
  selector:
    app: thanos-query
    part-of: thanos
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: thanos-query
    part-of: thanos
  name: thanos-query
  namespace: thanos
spec:
  rules:
  - host: query.local
    http:
      paths:
      - backend:
          serviceName: thanos-query
          servicePort: http
        path: /
